fix email sender issues

--- a/users/templates/registration/email_create.html
+++ b/users/templates/registration/email_create.html
@@ -1,5 +1,5 @@
 {% autoescape off %}
-Hello {{ user.get_full_name }} from Bifonix
+Hello {{ user.get_full_name }} from TraderMines
 
 We've received a request to create an account for this email.
 
