--- a/users/templates/registration/user_create_done.html
+++ b/users/templates/registration/user_create_done.html
@@ -12,7 +12,7 @@
 					<div class="col-12 text-center">
 						<div class="single-page-title">
 							<h2>{% trans 'Create Your Account' %}</h2>
-							<p>{ trans 'Confirmation Email Sent' %}</p>
+							<p>{% trans 'Confirmation Email Sent' %}</p>
 						</div>
 					</div>
 				</div>
