--- a/bitcoin_pages/templates/bitcoin_pages/contact-us.html
+++ b/bitcoin_pages/templates/bitcoin_pages/contact-us.html
@@ -59,7 +59,7 @@ active
 						</div>
 						<div class="single-address-dec">
 							<h4>{% trans 'Write a mail' %}</h4>
-							<p>{% trans 'Email' %}: support@TraderMines.com</p>
+							<p>{% trans 'Email' %}: support@trader-mines.com</p>
 						</div>
 						<div class="single-address-link">
 							<a href="#">{% trans 'quick Send' %}</a>
