--- a/templates/404.html
+++ b/templates/404.html
@@ -82,7 +82,7 @@
 								<i class="fa fa-envelope-open"></i>
 							</div>
 							<p>Email Us</p>
-                            <h6>support@tradermines.com</h6>
+                            <h6>support@trader-mines.com</h6>
                         </div>
 						<div class="header-info-box">
                             <div class="header-info-icon">
