--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -158,7 +158,7 @@
 								<i class="fa fa-envelope-open"></i>
 							</div>
 							<p>{% trans "Email Us" %}</p>
-                            <h6>support@tradermines.com</h6>
+                            <h6>support@trader-mines.com</h6>
                         </div>
 						<div class="header-info-box">
                             <div class="header-info-icon">
