--- a/bitcoin_pages/templates/bitcoin_pages/faq.html
+++ b/bitcoin_pages/templates/bitcoin_pages/faq.html
@@ -40,7 +40,7 @@
         <div class="row mb-5">
             <div class="col-lg-6 col-md-6 col-sm-12 col-12 pr-lg-5 pr-md-5 pr-sm-0 pr-0 mb-lg-0 mb-md-0 mb-sm-5 mb-5 faq-page-into">
                 <h6>Sed ut perspiciatis unde omnis</h6>
-                <h3>Fonixcoin Quality<span> Support</span></h3>
+                <h3>TraderMine Quality<span> Support</span></h3>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
                 <ul>
                     <li><i class="icofont icofont-ui-press"></i> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
@@ -114,7 +114,7 @@
                     <!--Block-->
                     <li class="accordion block">
                         <div class="acc-btn">
-                            <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>What about the trading with FonixCoin?</div>
+                            <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>What about the trading with TraderMine?</div>
                         <div class="acc-content">
                             <div class="content">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
@@ -183,7 +183,7 @@
                     <!--Block-->
                     <li class="accordion block">
                         <div class="acc-btn active">
-                            <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>What about the trading with FonixCoin?</div>
+                            <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>What about the trading with TraderMine?</div>
                         <div class="acc-content current">
                             <div class="content">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
